# project6-prompt-engineering-research

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  COSTS.md  PROMPT_BOOK.md  README.md  apply_overrides.py  generate_figures.py  pyproject.toml  requirements.txt  run_all_techniques.py  run_baseline.py  run_cot.py  run_few_shot.py  run_improved.py  run_role_based.py
.claude/: settings.local.json
.github/workflows/: ci.yml
PRPs/: 00-project-overview.md  01-stage-1-dataset.md  02-stage-2-baseline.md  03-stage-3-techniques.md  04-stage-4-analysis.md
assessments/: self-assessment-2025-12-11.md
data/: manual_overrides.csv  test_cases.csv
docs/: ARCHITECTURE.md  EXTENDING.md  PRD.md  stage-1-2-instructions.md  stage-3-instructions.md  stage-4-instructions.md
docs/adr/: 001-local-llm-ollama.md  002-prompt-generator-pattern.md  003-metrics-calculation.md
quality-checks/: quality-check-2025-12-09-102500.md  quality-check-2025-12-09-103500.md  quality-check-2025-12-09-104000.md  quality-check-2025-12-10-220000.md  quality-check-2025-12-11-001.md  quality-check-2025-12-11-153300.md
report/: REPORT.md
results/: baseline_results.csv  baseline_stats.json  cot_results.csv  cot_stats.json  few_shot_results.csv  few_shot_stats.json  improved_results.csv  improved_stats.json  role_based_results.csv  role_based_stats.json
results/raw/: baseline_results.csv  cot_results.csv  few_shot_results.csv  improved_results.csv  role_based_results.csv
results/stats/: comparison_stats.json
scripts/: apply_overrides.py  generate_figures.py  run_all_techniques.py  run_baseline.py  run_cot.py  run_few_shot.py  run_improved.py  run_role_based.py
src/: __init__.py  answer_evaluator.py  answer_utils.py  cli_runner.py  comparison_utils.py  config.py  experiment_runner.py  gemini_client.py  metrics.py  ollama_client.py  override_utils.py  visualization.py
src/charts/: __init__.py  bar_charts.py  base.py  heatmaps.py  line_charts.py  specialized_charts.py
src/prompts/: __init__.py  base.py  chain_of_thought.py  few_shot.py  improved.py  role_based.py
task-descriptions/: prompt-engineering-lecture.md  task-description.md
tests/: __init__.py  test_answer_evaluator.py  test_config.py  test_metrics.py  test_prompts.py  test_prompts_advanced.py
